--- a/src/sass/components/media/_media-main-game.scss
+++ b/src/sass/components/media/_media-main-game.scss
@@ -43,4 +43,7 @@
   .arrow {
     margin-top: 32%;
   }
+  .game_main__modal {
+    padding-top: 6%;
+  }
 }
